# GQLBridge

./: LICENSE  README.md  pyproject.toml
src/gqlbridge/: __init__.py  core.py
